refactor: simplify structure generation classes